kubernetes_helm/02_deploy-with-kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /demo-app
            pathType: Exact
            backend:
              service:
                name: my-service
                port: 
                  number: 80
